# go2_sim

./: .gitignore  README.md
policy/go2/: base.yaml
policy/go2/go2_amp/: config.yaml  policy_1.pt
policy/go2/go2_cts/: config.yaml
src/go2_sim/: CMakeLists.txt  package.xml
src/go2_sim/include/: fsm.hpp  fsm_go2.hpp  inference_runtime.hpp  logger.hpp  loop.hpp  motion_loader.hpp  rl_sdk.hpp  rl_sim.hpp
src/go2_sim/launch/: gazebo.launch
src/go2_sim/src/: inference_runtime.cpp  motion_loader.cpp  observation_buffer.cpp  rl_sdk.cpp  rl_sim.cpp
src/go2_sim/worlds/: stairs.world
src/robot_joint_controller/: CMakeLists.txt  package.xml
src/robot_joint_controller/ros/include/: robot_joint_controller.h
src/robot_joint_controller/ros/src/: robot_joint_controller.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_resources/go2_description/: CMakeLists.txt
